# Entelechy

./: .clang-format  .gitattributes  .gitignore  .vault-context.json.template  AGENTS-BUILD.md  AGENTS-CODE.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Note_TODO.md  README.md  TODO.md  build.bat  build.py  conanfile.py  imgui.ini  pyrightconfig.json
_engine/source/asset/: AGENTS.md  CMakeLists.txt  asset_handle.h  asset_loader.h  asset_server.cpp  asset_server.h  asset_types.h  assets.h  handle_table.h
_engine/source/asset/tests/: CMakeLists.txt  test_asset.cpp
_engine/source/base/: AGENTS.md  CMakeLists.txt  dynamic_array.h  fixed_ring_queue.h  hash_map.h  inline_array.h  path.h  ring_buffer.h  small_string.h  string_format.h  string_intern_pool.cpp  string_intern_pool.h
_engine/source/base/tests/: CMakeLists.txt  test_small_string.cpp
_engine/source/bridge/: AGENTS.md  CMakeLists.txt  agent_bridge.cpp  agent_bridge.h  tool_registry.cpp  tool_registry.h
_engine/source/bridge/private/: agent_bridge.cpp  tool_registry.cpp
_engine/source/bridge/public/: agent_bridge.h  tool_registry.h
_engine/source/core/: AGENTS.md  CMakeLists.txt  app.cpp  app.h  archetype_chunk.h  atom_registry.cpp  atom_registry.h  command_buffer.h  component_array.h  entity_registry.cpp  entity_registry.h  event_buffer.h  event_cleanup_system.cpp  event_cleanup_system.h  event_lifetime.h  events.h  inspector_reflection.h  phase.h  plugin.h  prefab.cpp  prefab.h  query.h  scene_serializer.cpp  scene_serializer.h  scheduler.cpp  scheduler.h  small_string.h  sparse_set.cpp  sparse_set.h  string_format.h  string_id.h  system_desc.h  type_registry.cpp  type_registry.h  types.h  world.cpp  world.h
_engine/source/core/allocator/: ALLOCATOR_GUIDE.md
_engine/source/core/public/: foundation_types.h
_engine/source/core/tests/: CMakeLists.txt  test_geometry.cpp  test_mat4.cpp  test_math_common.h  test_memory.cpp  test_misc.cpp  test_quat.cpp  test_radix_sort.cpp  test_small_string.cpp  test_string.cpp  test_vec.cpp  test_world.cpp
_engine/source/ecs/tests/: CMakeLists.txt  test_archetype_world.cpp  test_world.cpp
_engine/source/imgui/: AGENTS.md  CMakeLists.txt  imgui_atom_registry.cpp  imgui_init.cpp  imgui_manager.cpp  imgui_manager.h  imgui_panels.cpp  imgui_panels.h
_engine/source/imgui/private/: imgui_atom_registry.cpp  imgui_init.cpp  imgui_manager.cpp  imgui_panels.cpp
_engine/source/imgui/public/: imgui_init.h  imgui_manager.h  imgui_panels.h
_engine/source/log/: AGENTS.md  CMakeLists.txt  console_output.cpp  console_output.h  file_output.cpp  file_output.h  json_file_output.cpp  json_file_output.h  log_category.h  log_entry.h  log_level.h  log_macros.h  log_output_device.h  log_utils.h  logger.cpp  logger.h  queued_log_entry.h
_engine/source/math/: AGENTS.md  CMakeLists.txt  aabb.h  align.h  frustum.h  half.h  hierarchy.h  mat4.h  math_config.h  math_lib.cpp  math_lib.h  quat.h  random.h  ray.h  simd.h  transform_component.h  transform_propagation_system.cpp  transform_propagation_system.h  vec.h
_engine/source/math/tests/: CMakeLists.txt  test_geometry.cpp  test_mat4.cpp  test_math_common.h  test_misc.cpp  test_quat.cpp  test_vec.cpp
_engine/source/memory/: AGENTS.md  ALLOCATOR_GUIDE.md  CMakeLists.txt  allocator.h  debug_allocator_wrapper.cpp  debug_allocator_wrapper.h  dynamic_array.h  frame_arena.cpp  frame_arena.h  iallocator.h  object_pool.h  ring_buffer.h
_engine/source/memory/tests/: CMakeLists.txt  test_memory.cpp
_engine/source/motor/: AGENTS.md  CMakeLists.txt  movement_system.cpp
_engine/source/motor/private/: movement_system.cpp
_engine/source/motor/public/: movement_system.h
_engine/source/render/: AGENTS.md  CMakeLists.txt  RenderPhase.h  RenderResources.h  gl_rhi_device.cpp  gl_rhi_device.h  material.cpp  material.h  material_types.h  opengl_backend.cpp  opengl_backend.h  render_backend.h  rhi_device.h  rhi_pipeline.h  rhi_resources.h  rhi_types.h  shader_cache.cpp  shader_cache.h  simple_cube_renderer.cpp  simple_cube_renderer.h
_engine/source/render/components/: Camera.h  MaterialHandle.h  MeshHandle.h  RenderCamera.h  RenderComponents.h
_engine/source/render/culling/: FrustumCullSystem.cpp  FrustumCullSystem.h  ViewVisibleList.h
_engine/source/render/extract/: ExtractCameraSystem.cpp  ExtractCameraSystem.h  ExtractRenderablesSystem.cpp  ExtractRenderablesSystem.h  MainWorldSync.h
_engine/source/render/queue/: BinnedRenderPhase.cpp  BinnedRenderPhase.h  PhaseItem.h  QueueDrawsSystem.cpp  QueueDrawsSystem.h  SortedRenderPhase.cpp  SortedRenderPhase.h
_engine/source/render/render_world/: ExtractSchedule.cpp  ExtractSchedule.h  RenderWorld.cpp  RenderWorld.h
_engine/source/render/tests/: CMakeLists.txt  test_binned_render_phase.cpp  test_gpu_resource_lifecycle.cpp  test_render_parallel.cpp  test_render_view_resources.cpp  test_sort_key.cpp
_engine/source/system/: AGENTS.md  CMakeLists.txt  movement_system.cpp  movement_system.h  scheduler.h  system_init.cpp  transform_propagation_system.cpp  transform_propagation_system.h
_engine/source/test/: AGENTS.md  CMakeLists.txt  test_framework.cpp  test_framework.h
_engine/source/test/private/: test_framework.cpp
_engine/source/test/public/: test_framework.h
_engine/source/test_batch0/: CMakeLists.txt  test_batch0.cpp
_engine/source/test_runner/: AGENTS.md  CMakeLists.txt  main.cpp
_engine/source/test_runner/private/: main.cpp
_engine/source/thread_pool/: AGENTS.md  CMakeLists.txt  thread_pool.cpp  thread_pool.h
_engine/source/thread_pool/private/: thread_pool.cpp
_engine/source/vfs/: AGENTS.md  CMakeLists.txt  mount_point.cpp  mount_point.h  vfs.cpp  vfs.h  vfs_types.h
_engine/source/window/: AGENTS.md  CMakeLists.txt  glfw_window.cpp  glfw_window.h  input_event.h  input_queue.cpp  input_queue.h  window.h  window_init.cpp  window_init.h
_game/source/runtime/: AGENTS.md  CMakeLists.txt  game_plugin.cpp  game_plugin.h  game_runtime.cpp
launch/templates/: CMakeLists.txt  main.cpp  main.cpp.in  proxy_cmakelists.txt.in
launch/templates/cmake/: json_parser.cmake
(+293 files in other folders)
